# simpleini

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .travis.yml  BoostUTF.hpp  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  ConvertUTF.c  ConvertUTF.cpp  ConvertUTF.h  ConvertUTF_8h_source.html  ConvertUTF_readme.txt  Doxyfile  LICENCE.txt  Makefile  README.md  SimpleIni.h  SimpleIni.sln  SimpleIni.vcproj  SimpleIni_8h_source.html  annotated.html  appveyor.yml  classCSimpleIniTempl-members.html  classCSimpleIniTempl.html  classCSimpleIniTempl_1_1Converter-members.html  classCSimpleIniTempl_1_1Converter.html  classCSimpleIniTempl_1_1Converter__coll__graph.map  classCSimpleIniTempl_1_1Converter__coll__graph.md5  classCSimpleIniTempl_1_1Converter__inherit__graph.map  classCSimpleIniTempl_1_1Converter__inherit__graph.md5  classCSimpleIniTempl_1_1FileWriter-members.html  classCSimpleIniTempl_1_1FileWriter.html  classCSimpleIniTempl_1_1FileWriter__coll__graph.map  classCSimpleIniTempl_1_1FileWriter__coll__graph.md5  classCSimpleIniTempl_1_1FileWriter__inherit__graph.md5  classCSimpleIniTempl_1_1OutputWriter-members.html  classCSimpleIniTempl_1_1OutputWriter.html  classCSimpleIniTempl_1_1OutputWriter__inherit__graph.map  classCSimpleIniTempl_1_1OutputWriter__inherit__graph.md5  (+57 more)
.github/workflows/: build-and-test.yml  build-doxygen.yml  build-test.yml  codeql.yml  doxygen.yml  test.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  typedefs_0.js
tests/: .gitignore  CMakeLists.txt  Makefile  tests.vcxproj  tests.vcxproj.filters  ts-boolean.cpp  ts-bugfix.cpp  ts-casesensitivity.cpp  ts-deletion.cpp  ts-edgecases.cpp  ts-generic.cpp  ts-iostream.cpp  ts-multiline.cpp  ts-noconvert.cpp  ts-numeric.cpp  ts-quotes.cpp  ts-regressions.cpp  ts-roundtrip.cpp  ts-sections.cpp  ts-snippets.cpp  ts-utf8-conversion.cpp  ts-utf8.cpp  ts-wchar.cpp
tests/data/: README.md  utf8-ini-roundtrip.ini  utf8-reject.hex
vcproj/: SimpleIni.sln
